@@ -108,6 +108,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       filtertest: Add "-l" flag to use Linux BPF extensions.
       filtertest: Use ntohl() on the netmask to fix the -m option.
       filtertest: Add support for stdin as "-" to the -F option.
+      Rename CMake option to ENABLE_PROTOCHAIN to match Autoconf.
     Hurd:
       Support network capture devices too.
       Fix a few device activation bugs.
